--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <td>35</td>
             </tr>
             <tr>
-                <td>Transporte en tren</td>
+                <td>Transporte en tren gatis</td>
                 <td>60</td>
             </tr>
         </table>
@@ -132,3 +132,4 @@
 
     <footer>
         <p>&copy; 2025 Turismo Per
+
