--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turismo en Machu Picchu</title>
-    <!-- Conectando con mi css -->
-    <link rel="Stylesheet" href="Styles.css" >
+    <title>Turismo en Machu Picchu</title><!-- titulo -->
+    <link rel="Stylesheet" href="Styles.css" ><!-- Conectando con mi css -->
 </head>
 <body>
     <header>
             <h1>Turismo en Machu Picchu</h1>
     </header>
-    <nav>
+    <nav> <!-- Enlaces -->
             <a href="#info">Historia</a>
             <a href="#costos">Costos</a>
             <a href="#mapa">Mapa</a>
             <a href="#video">Video</a>
     </nav>
-    <section id="imagenPortada">
-        <video autoplay loop muted playsinline>
+    <section id="imagenPortada"><!-- video inicial -->
+        <video autoplay loop muted playsinline> 
             <source src="videos/vlc-record-2025-09-13-00h44m29s-Machu Picchu, Peru  [Amazing Places 4K] (1).mp4-.mp4" type="video/mp4">
             Tu navegador no soporta la etiqueta de video.
         </video>
@@ -34,7 +33,7 @@
                 Permaneció oculto por siglos hasta que en 1911 Hiram Bingham lo dio a conocer al mundo. En 1983 la UNESCO lo declaró Patrimonio de la Humanidad y en 2007 
                 fue nombrado Maravilla del Mundo Moderno.
             </p>
-            <img src="imagenes/H_MACHUPICCHU.jpeg" alt="H_MACHUPICCHU">
+            <img src="imagenes/H_MACHUPICCHU.jpeg" alt="H_MACHUPICCHU"><!-- imagen referencial  -->
         </section>
         <section class="info">
             <h2>Descripcion</h2>
@@ -43,10 +42,10 @@
                 Agrícola: con andenes para cultivos, Urbano: con templos, plazas y recintos sagrados como el Templo del Sol y el Intihuatana.Además de su arquitectura,
                 ofrece paisajes impresionantes de la cordillera andina.
             </p>
-            <img src="imagenes/D_machupicchu.jpeg" alt="D_machupicchu">
+            <img src="imagenes/D_machupicchu.jpeg" alt="D_machupicchu"><!-- imagen referencial -->
         </section>
     </section>
-    <section id="costos">
+    <section id="costos"> <!-- tabla de costos -->
         <h2>Costos de Viaje</h2>
         <table>
             <tr>
@@ -72,20 +71,19 @@
         </table>
     </section>
     <section id="masinfo">
-        <section id="mapa">
+        <section id="mapa"><!-- imapa -->
             <h2>Ubicación en el Mapa</h2>
             <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3828.5337899095843!2d-72.54512818534385!3d-13.163141990740447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916dd6736f4d44c1%3A0x7b3a58a503d3d6d7!2sMachu%20Picchu!5e0!3m2!1ses!2spe!4v1678123456789"
                 width="600" height="400" allowfullscreen>
             </iframe>
         </section>
-
-        <section id="video">
+        <section id="video"><!-- video -->
             <h2>Video Promocional</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/lNIEZ61PyG0?si=ihVTcdYD4JR5ll0A&amp;start=3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
     </section>
-    <section id="contacto">
+    <section id="contacto"><!-- formulario -->
         <h2>Contactos & Promociones</h2>
         <p>Déjanos tus datos y recibe información exclusiva sobre ofertas y promociones para visitar Machu Picchu.</p>
         
@@ -106,7 +104,7 @@
         </form>
     </section>
 
-    <footer>
+    <footer><!-- pie de pagina -->
         <p>&copy; 2025 Turismo Perú. Todos los derechos reservados.</p>
     </footer>
 </body>
