--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turismo en Machu Picchudd</title><!-- titulo -->
+    <title>Turismo en Machu ePicchudd</title><!-- titulo -->
     <link rel="Stylesheet" href="Styles.css" ><!-- Conectando con mi css -->
 </head>
 <body>
@@ -110,4 +110,5 @@
 </body>
 
 </html>
+
 
