--- a/tallerProgramacion/index.html
+++ b/tallerProgramacion/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>CAFEE ANGEL</title>
+  <title>CAFE ANGEL</title>
   <link rel="stylesheet" href="Styles.css" />
 </head>
 <body>
@@ -183,3 +183,4 @@
 
 </body>
 </html>
+
